syntax = "proto3";

package auth;

option go_package = "/;auth";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message AuthResponse {
  string message = 1;
  string token = 2;
}

message ValidateTokenResponse {
  bool is_valid = 1;
}
